# ROS_Learn

./: README (copy).md  README.md  Read Before Use.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/learning_joy/: anjing  cobapos  cobaposasli  joygazeb  listener  robot_abs_orientation  robot_move_rotate  turtle  turtle_listen  turtle_teleop  turtle_teleop_joy
devel/lib/pkgconfig/: eufs_description.pc  eufs_gazebo.pc  learning_joy.pc  mobilku.pc  mybot_control.pc  mybot_description.pc  mybot_gazebo.pc  mybot_navigation.pc  racecar_control.pc  racecar_description.pc  racecar_gazebo.pc  robot_control.pc  ros_joystick_reading_data.pc  set_speed_joint_cpp.pc  tutorial_ai.pc
devel/lib/robot_control/: robot_control_node
devel/lib/ros_joystick_reading_data/: joystick_reader
devel/lib/tutorial_ai/: first  second
devel/share/eufs_description/cmake/: eufs_descriptionConfig.cmake
devel/share/eufs_gazebo/cmake/: eufs_gazeboConfig.cmake
devel/share/learning_joy/cmake/: learning_joyConfig.cmake
src/learning_joy/: CMakeLists.txt  joygazeb.launch  listener.launch  turtle_joy.launch
src/learning_joy/src/: cobapos.cpp  cobaposasli.cpp  joy_gazebo.cpp  listener.cpp  turtle_teleop_joy.cpp
src/mobilku/: CMakeLists.txt  package.xml
src/mobilku/launch/: spawn1.launch  spawn2.launch  start.launch
src/mobilku/models/mobilkw/: model.config  model.sdf
src/mobilku/src/: set_speed_joint_plugin.cpp
src/ros_joystick_reading_data/launch/: joystick_reading_data.launch
src/ros_joystick_reading_data/src/: joystick_reader.cpp
(+12 files in other folders)
